# rust-practice

borrowing/: Cargo.toml
borrowing/src/: example1.rs  example2.rs  example3.rs  example4.rs  main.rs
box_pointers/: Cargo.toml
box_pointers/src/: main.rs
closures/src/: main.rs
collections/src/: main.rs
collectors/: Cargo.toml
combinators/src/: main.rs
constants_and_statics/: Cargo.toml
constants_and_statics/src/: example1.rs  example2.rs  main.rs
control_flow/: Cargo.toml
control_flow/src/: example1.rs  example2.rs  example3.rs  example4.rs  main.rs
data_types/: Cargo.toml
data_types/src/: example1.rs  example2.rs  example3.rs  example4.rs  example5.rs  example6.rs  example7.rs  example8.rs  example9.rs  main.rs
enumerations/: Cargo.toml
enumerations/src/: enums.rs  example1.rs  example2.rs  main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
errors/src/: main.rs
errors2/: Cargo.toml
errors2/src/: main.rs
errors4/: Cargo.toml
errors5/: Cargo.toml
functions/: Cargo.toml
generic_lifetimes/: Cargo.toml
implementations/: Cargo.toml
iterator_pattern/: Cargo.toml
matching/: Cargo.toml
modules/: Cargo.toml
modules/src/: auth_utils.rs  database.rs  lib.rs  main.rs
modules/src/auth_utils/: models.rs
option/: Cargo.toml
ownership/: Cargo.toml
result/: Cargo.toml
shared_pointers/: Cargo.toml
slices/: Cargo.toml
structures/: Cargo.toml
tuples/: Cargo.toml
variables/: Cargo.toml
variables/src/: example1.rs  example2.rs  example3.rs  main.rs  variables.rs
vectors/: Cargo.toml
(+55 files in other folders)
