[package]
name = "control_flow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example1"
path = "src/example1.rs"

[[bin]]
name = "example2"
path = "src/example2.rs"

[[bin]]
name = "example3"
path = "src/example3.rs"

[[bin]]
name = "example4"
path = "src/example4.rs"

[dependencies]
num = "0.4"